test/tests/compiler/18_structures/invalid_parse/struct_member_initializer.plx
type struc a (
    # structure members cannot have initializers
    member: i32 = 1
)
